--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# Created 2018-11-15 Thu 13:46
+# Created 2018-11-16 Fri 11:28
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
 #+OPTIONS: title:nil author:nil email:nil toc:t |:t ^:nil
@@ -46,8 +46,10 @@ with the backlight cooling fans and indicator lights.
   #       ],
   #       "verbosity": "NAMES",
   #       "functions": [
-  #         "setIrBacklightsOnAtIntensity",
-  #         "setVisibleBacklightsOnAtIntensity",
+  #         "setIrBacklightsAndFansOnAtPower",
+  #         "setIrBacklightsAndFansOnAtIntensity",
+  #         "setVisibleBacklightsAndIndicatorsOnAtPower",
+  #         "setVisibleBacklightsAndIndicatorsOnAtIntensity",
   #         "addVisibleBacklightsPwm",
   #         "addExperimentStep",
   #         "getExperimentSteps",
@@ -67,10 +69,10 @@ with the backlight cooling fans and indicator lights.
   #         "flyBowlsEnabled"
   #       ],
   #       "callbacks": [
-  #         "setIrBacklightsOn",
-  #         "setIrBacklightsOff",
-  #         "setVisibleBacklightsOn",
-  #         "setVisibleBacklightsOff",
+  #         "setIrBacklightsAndFansOn",
+  #         "setIrBacklightsAndFansOff",
+  #         "setVisibleBacklightsAndIndicatorsOn",
+  #         "setVisibleBacklightsAndIndicatorsOff",
   #         "removeAllExperimentSteps",
   #         "runExperiment",
   #         "stopExperiment"
@@ -123,9 +125,9 @@ with the backlight cooling fans and indicator lights.
   #     14.770000
   #   ]
   # }
-  setIrBacklightsOnAtIntensity 4.5
+  setIrBacklightsAndFansOnAtIntensity 4.5
   # {
-  #   "id": "setIrBacklightsOnAtIntensity",
+  #   "id": "setIrBacklightsAndFansOnAtIntensity",
   #   "result": null
   # }
   removeAllExperimentSteps
@@ -228,14 +230,14 @@ with the backlight cooling fans and indicator lights.
   #     "sequence_count": 0
   #   }
   # }
-  setVisibleBacklightsOnAtIntensity 4.6
+  setVisibleBacklightsAndIndicatorsOnAtIntensity 4.6
   # {
-  #   "id": "setVisibleBacklightsOnAtIntensity",
+  #   "id": "setVisibleBacklightsAndIndicatorsOnAtIntensity",
   #   "result": null
   # }
-  setVisibleBacklightsOff
+  setVisibleBacklightsAndIndicatorsOff
   # {
-  #   "id": "setVisibleBacklightsOff",
+  #   "id": "setVisibleBacklightsAndIndicatorsOff",
   #   "result": null
   # }
   addVisibleBacklightsPwm ?
@@ -266,9 +268,9 @@ with the backlight cooling fans and indicator lights.
   #   "id": "stopPwm",
   #   "result": null
   # }
-  setIrBacklightsOff
+  setIrBacklightsAndFansOff
   # {
-  #   "id": "setIrBacklightsOff",
+  #   "id": "setIrBacklightsAndFansOff",
   #   "result": null
   # }
 #+END_SRC
@@ -289,7 +291,7 @@ with the backlight cooling fans and indicator lights.
   # [5.99, 5.59, 5.41, 5.57]
   dev.visible_backlight_power_to_intensity_ratio('setValue',[14.66,15.87,14.04,14.77])
   # [14.66, 15.87, 14.04, 14.77]
-  dev.set_ir_backlights_on_at_intensity(4.5) # 4.5 mW/mm^2. Automatically turns fans on too
+  dev.set_ir_backlights_and_fans_on_at_intensity(4.5) # 4.5 mW/mm^2
   dev.remove_all_experiment_steps()
   intensity = 1.71 # 1.71 mW/mm^2
   pulse_period = 100 # 100 ms
@@ -363,8 +365,8 @@ with the backlight cooling fans and indicator lights.
   #  'experiment_step_count': 2,
   #  'sequence_index': 0,
   #  'sequence_count': 0}
-  dev.set_visible_backlights_on_at_intensity(4.6) # 4.6 mW/mm^2
-  dev.set_visible_backlights_off()
+  dev.set_visible_backlights_and_indicators_on_at_intensity(4.6) # 4.6 mW/mm^2
+  dev.set_visible_backlights_and_indicators_off()
   dev.add_visible_backlights_pwm('?')
   # {'name': 'addVisibleBacklightsPwm',
   #  'firmware': 'FlyBowlController',
@@ -385,7 +387,7 @@ with the backlight cooling fans and indicator lights.
                                              pulse_on_duration,
                                              pulse_count)
   dev.stop_pwm(pwm_index)
-  dev.set_ir_backlights_off() # Automatically turns fans off too
+  dev.set_ir_backlights_and_fans_off()
 #+END_SRC
 
 *** Matlab
@@ -418,7 +420,7 @@ with the backlight cooling fans and indicator lights.
   % [5.99]    [5.59]    [5.41]    [5.57]
   dev.visibleBacklightPowerToIntensityRatio('setValue',{14.66,15.87,14.04,14.77})
   % [14.66]    [15.87]    [14.04]    [14.77]
-  dev.setIrBacklightsOnAtIntensity(4.5); % 4.5 mW/mm^2. Automatically turns on fans too
+  dev.setIrBacklightsAndFansOnAtIntensity(4.5); % 4.5 mW/mm^2
   dev.removeAllExperimentSteps();
   intensity = 1.71; % 1.71 mW/mm^2
   pulse_period = 100; % 100 ms
@@ -494,8 +496,8 @@ with the backlight cooling fans and indicator lights.
   % experiment_step_count: 2
   %        sequence_index: 0
   %        sequence_count: 0
-  dev.setVisibleBacklightsOnAtIntensity(4.6); % 4.6 mW/mm^2
-  dev.setVisibleBacklightsOff();
+  dev.setVisibleBacklightsAndIndicatorsOnAtIntensity(4.6); % 4.6 mW/mm^2
+  dev.setVisibleBacklightsAndIndicatorsOff();
   intensity = 6.0; % 6.0 mW/mm^2
   pulse_delay = 1000; % 1000 ms
   pulse_period = 100; % 100 ms
@@ -507,7 +509,7 @@ with the backlight cooling fans and indicator lights.
                                           pulse_on_duration, ...
                                           pulse_count);
   dev.stopPwm(pwm_index);
-  dev.setIrBacklightsOff();
+  dev.setIrBacklightsAndFansOff();
   dev.close();
   clear dev;
 #+END_SRC
@@ -811,7 +813,49 @@ Modular device fly bowl controller library.
 *** API NAMES
 
 #+BEGIN_SRC js
-
+  {
+    "id": "getApi",
+    "result": {
+      "firmware": [
+        "FlyBowlController"
+      ],
+      "verbosity": "NAMES",
+      "functions": [
+        "setIrBacklightsAndFansOnAtPower",
+        "setIrBacklightsAndFansOnAtIntensity",
+        "setVisibleBacklightsAndIndicatorsOnAtPower",
+        "setVisibleBacklightsAndIndicatorsOnAtIntensity",
+        "addVisibleBacklightsPwm",
+        "addExperimentStep",
+        "getExperimentSteps",
+        "getExperimentStatus"
+      ],
+      "parameters": [
+        "pulse_delay",
+        "pulse_period",
+        "pulse_on_duration",
+        "pulse_count",
+        "sequence_off_duration",
+        "sequence_count",
+        "step_delay",
+        "step_duration"
+      ],
+      "properties": [
+        "flyBowlsEnabled"
+      ],
+      "callbacks": [
+        "setIrBacklightsAndFansOn",
+        "setIrBacklightsAndFansOff",
+        "toggleIrBacklightsAndFans",
+        "setVisibleBacklightsAndIndicatorsOn",
+        "setVisibleBacklightsAndIndicatorsOff",
+        "toggleVisibleBacklightsAndIndicators",
+        "removeAllExperimentSteps",
+        "runExperiment",
+        "stopExperiment"
+      ]
+    }
+  }
 #+END_SRC
 
 *** API GENERAL
