Update email address

--- a/README.org
+++ b/README.org
@@ -10,7 +10,7 @@
 - License :: BSD, Open-Source Hardware
 - URL :: https://github.com/janelia-modular-devices/fly_bowl_controller
 - Author :: Peter Polidoro
-- Email :: peterpolidoro@gmail.com
+- Email :: peter@polidoro.io
 
 ** Description
 
@@ -581,7 +581,7 @@ intensity = 1.71 mW/mm^2 (power = 25 %)
 - License :: Open-Source Hardware
 - URL :: https://github.com/janelia-kicad/backlight_controller_5x3
 - Author :: Peter Polidoro
-- Email :: peterpolidoro@gmail.com
+- Email :: peter@polidoro.io
 
 **** Description
 
@@ -700,7 +700,7 @@ Send gerbers zip file to your favorite PCB manufacturer for fabrication.
 - License :: Open-Source Hardware
 - URL :: https://github.com/janelia-kicad/fly_bowl_wiring
 - Author :: Peter Polidoro
-- Email :: peterpolidoro@gmail.com
+- Email :: peter@polidoro.io
 
 **** Description
 
@@ -804,7 +804,7 @@ Wiring schematics and documentation for the multiple fly bowl rig.
 - License :: BSD
 - URL :: https://github.com/janelia-arduino/FlyBowlController
 - Author :: Peter Polidoro
-- Email :: peterpolidoro@gmail.com
+- Email :: peter@polidoro.io
 
 **** Description
 
